ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: directus-ingress
  namespace: directus

spec:
  rules:
  - host: directus.telefonicawebsites.co
    http:
      paths:
      - backend:
          serviceName: directus
          servicePort: 8055
        path: /(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - directus.telefonicawebsites.co
    secretName: tls-directus
status:
  loadBalancer:
    ingress:
    - ip: 20.75.131.24
